# mvi-validator

./: .gitignore  README-dev.md  README.ja.md  README.md  setup.cfg
notebooks/: hello-mv-validator.ipynb
samples/: custom_inference.py
src/mvi_validator/: __init__.py
src/tests/: mvi_validator_cli_spec.py  mvi_validator_spec.py
test_data/test_ball_bearing_normal_and_stain/: 018a6fda-30c6-4bf6-97ee-c95199f11af5.xml  018a6fda-30c6-4bf6-97ee-c95199f11af5_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  0cefef6b-18ad-47e1-ac3d-30e06b9b25c6.xml  0cefef6b-18ad-47e1-ac3d-30e06b9b25c6_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  1626bd1d-eacc-44b4-a8f3-6901065d8861.xml  1626bd1d-eacc-44b4-a8f3-6901065d8861_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  2edb8cc7-7af6-4a9f-a952-695d4c26ef09.xml  2edb8cc7-7af6-4a9f-a952-695d4c26ef09_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  3818ba99-337d-44d4-b526-40254a727d3f.xml  3818ba99-337d-44d4-b526-40254a727d3f_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  4052a355-e795-4889-a020-2642f1cbcfa5_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  4e08b69a-21ac-4d4b-ba12-fa3f9dccfb7b.xml  4e08b69a-21ac-4d4b-ba12-fa3f9dccfb7b_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  50c786ae-92bc-4c37-a788-d4e3f94ef4f5.xml  50c786ae-92bc-4c37-a788-d4e3f94ef4f5_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  546f47e9-ea10-4d39-9345-261cb63dcce3.xml  546f47e9-ea10-4d39-9345-261cb63dcce3_bb44e214-e208-4e6a-a88b-d9ab173023da.cache.json  5d782551-2d29-42b8-bc12-1ea05ae3b387.xml  70f77b17-b137-434a-9e63-f0a5d00d29cc.xml  (+37 more)
