# =================================================================
# mvi-validator
#
# Copyright (c) 2022 Takahide Nogayama
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
# =================================================================

[metadata]
name = mvi-validator
version = 0.0.11
author = Takahide Nogayama
author_email = nogayama@jp.ibm.com
description = MVI Validator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBM/mvi-validator
project_urls =
    Bug Tracker = https://github.com/IBM/mvi-validator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    requests
    pandas
    tabulate
    

package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]  # in setup.cfg
test =
    uspec
    PyHamcrest

dev =
    uspec
    PyHamcrest
    yapf

notebook =
    notebook
    matplotlib
#    seaborn

#scripts =
#    scripts/dw
[options.entry_points]
console_scripts =
    mvi_validator = mvi_validator:_cli_main
    mvi-validator = mvi_validator:_cli_main

[options.packages.find]
where = src
